--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.kadirkuruca.newsapp"
+        applicationId "com.kholifah.newsapp"
         minSdkVersion 17
         targetSdkVersion 31
         versionCode 1
